2008-08-20  kitone  <kitone@gna.org>

	* configure.in:
	Add dependence of glibmm >= 2.6.13. (patch by Luboš Staněk)

2008-08-19  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	RecentChooserMenu show tips.

2008-08-19  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of gtkmm >= 2.12.

	* src/gui/Application.cc:
	Remove deprecated widget (Gtk::Tooltips) and used now Gtk::Tooltip.

2008-08-19  kitone  <kitone@gna.org>

	* src/main.cc:
	Add default values to [waveform-renderer].

2008-08-19  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/EditCell.cc:
	Add functions "Edit Cell" and "Edit Next Cell".

2008-08-19  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Add the option "start_editing" to function "select".
	Making the column heading as bold if it has the focus.

	* src/Subtitles.cc:
	* src/Subtitles.h:
	Add the option "start_editing" to function "select". 

2008-08-18  kitone  <kitone@gna.org>

	* src/actions/ExternalVideoPlayer.cc:
	Fix accelkey.

2008-08-14  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-08-14  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.3 release.

2008-08-14  kitone  <kitone@gna.org>

	* src/debug.cc:
	Add profiling to debug functions (disable by default).

2008-08-14  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-spell-checking.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/ViewManager.cc:
	Fix: Dialog parent.

2008-08-14  kitone  <kitone@gna.org>

	* src/PluginSystem.cc:
	* src/gui/Application.cc:
	Improve the speed accessibility of the menu at launch.

2008-08-13  kitone  <kitone@gna.org>

	* share/glade/dialog-check-errors-preferences.glade:
	* share/glade/dialog-configure-keyboard-shortcuts.glade:
	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-style-editor.glade:
	* src/actions/VideoPlayerManagement.cc: