@@ -1,5 +1,10 @@
 2008-08-20  kitone  <kitone@gna.org>
 
+	* src/gui/DialogFileChooser.cc:
+	Add "Current Locale" if encodings is empty.
+
+2008-08-20  kitone  <kitone@gna.org>
+
 	* configure.in:
 	Add dependence of glibmm >= 2.6.13. (patch by Luboš Staněk)
 
